--- a/README
+++ b/README
@@ -9,7 +9,7 @@ pip install torndb
 pip install xlrd
 pip install xlwt
 pip install futures
-sudo pip install mysql-python
+sudo apt-get install python-mysqldb
 
 
 
